@@ -1,27 +1,72 @@
-FROM docker.io/clefos:latest
+# First stage: JDK 11 with modules required for Spring Boot
+FROM debian:stretch-slim as packager
 
-MAINTAINER James Dunnam "jamesd1184@gmail.com"
+# source JDK distribution names
+# update from https://jdk.java.net/java-se-ri/11
+ENV JDK_VERSION="11.0.1"
+ENV JDK_URL="https://download.java.net/java/GA/jdk11/13/GPL/openjdk-${JDK_VERSION}_linux-x64_bin.tar.gz"
+ENV JDK_HASH="7a6bb980b9c91c478421f865087ad2d69086a0583aeeb9e69204785e8e97dcfd"
+ENV JDK_HASH_FILE="${JDK_ARJ_FILE}.sha2"
+ENV JDK_ARJ_FILE="openjdk-${JDK_VERSION}.tar.gz"
+# target JDK installation names
+ENV OPT="/opt"
+ENV JKD_DIR_NAME="jdk-${JDK_VERSION}"
+ENV JAVA_HOME="${OPT}/${JKD_DIR_NAME}"
+ENV JAVA_MINIMAL="${OPT}/java-minimal"
+
+# downlodad JDK to the local file
+ADD "$JDK_URL" "$JDK_ARJ_FILE"
+
+# verify downloaded file hashsum
+RUN { \
+        echo "Verify downloaded JDK file $JDK_ARJ_FILE:" && \
+        echo "$JDK_HASH $JDK_ARJ_FILE" > "$JDK_HASH_FILE" && \
+        sha256sum -c "$JDK_HASH_FILE" ; \
+    }
+
+# extract JDK and add to PATH
+RUN { \
+        echo "Unpack downloaded JDK to ${JAVA_HOME}/:" && \
+        mkdir -p "$OPT" && \
+        tar xf "$JDK_ARJ_FILE" -C "$OPT" ; \
+    }
+ENV PATH="$PATH:$JAVA_HOME/bin"
+
+RUN { \
+        java --version ; \
+        echo "jlink version:" && \
+        jlink --version ; \
+    }
+
+# build modules distribution
+RUN jlink \
+    --verbose \
+    --add-modules \
+        java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
+        # java.naming - javax/naming/NamingException
+        # java.desktop - java/beans/PropertyEditorSupport
+        # java.management - javax/management/MBeanServer
+        # java.security.jgss - org/ietf/jgss/GSSException
+        # java.instrument - java/lang/instrument/IllegalClassFormatException
+    --compress 2 \
+    --strip-debug \
+    --no-header-files \
+    --no-man-pages \
+    --output "$JAVA_MINIMAL"
+
+# Second stage, add only our minimal "JRE" distr and our app
+FROM debian:stretch-slim
+
+ENV JAVA_HOME=/opt/java-minimal
+ENV PATH="$PATH:$JAVA_HOME/bin"
+
+# 
+FROM ubuntu:18.04
 
 ENV MAVEN_VERSION 3.5.0
 
-RUN yum update --setopt=tsflags=nodocs -y && \
-    yum install --setopt=tsflags=nodocs -y tar
-
 RUN echo deb http://us.archive.ubuntu.com/ubuntu/ precise main restricted universe multiverse
 RUN apt-get update && apt-get install -y wget git curl zip monit openssh-server git iptables ca-certificates daemon net-tools libfontconfig-dev
-
-#Install Oracle JDK 11
-#--------------------
-RUN 	curl -s -L 'https://api.adoptopenjdk.net/v2/binary/releases/openjdk11?openjdk_impl=openj9&os=linux&arch=s390x&release=latest&type=jdk' -o /tmp/openjdk.tar.gz && \
-		mkdir -p /usr/lib/jvm/java-11-openjdk && \
-		tar -C /usr/lib/jvm/java-11-openjdk -xzf /tmp/openjdk.tar.gz --strip-components=1 && \
-		ln -sf /usr/lib/jvm/java-11-openjdk /usr/lib/jvm/java && \
-		rm -f /tmp/openjdk.tar.gz && \
-		yum clean all && \ 
-		rm -rf /var/cache/yum/* /tmp/* /var/log/yum.log
-
-ENV		JAVA_HOME=/usr/lib/jvm/java
-ENV		PATH=$PATH:$JAVA_HOME/bin
 
 # Maven related
 # -------------
